; ModuleID = '/home/carl/AnghaBench/linux/drivers/atm/extr_zatm.c_zatm_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/atm/extr_zatm.c_zatm_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atm_vcc = type { i32, i32* }

@.str = private unnamed_addr constant [13 x i8] c">zatm_close\0A\00", align 1
@ATM_VF_READY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"close_tx\0A\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"zatm_close: done waiting\0A\00", align 1
@ATM_VF_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atm_vcc*)* @zatm_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zatm_close(%struct.atm_vcc* %0) #0 {
  %2 = alloca %struct.atm_vcc*, align 8
  store %struct.atm_vcc* %0, %struct.atm_vcc** %2, align 8
  %3 = call i32 @DPRINTK(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %4 = load %struct.atm_vcc*, %struct.atm_vcc** %2, align 8
  %5 = call i32 @ZATM_VCC(%struct.atm_vcc* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %28

8:                                                ; preds = %1
  %9 = load i32, i32* @ATM_VF_READY, align 4
  %10 = load %struct.atm_vcc*, %struct.atm_vcc** %2, align 8
  %11 = getelementptr inbounds %struct.atm_vcc, %struct.atm_vcc* %10, i32 0, i32 0
  %12 = call i32 @clear_bit(i32 %9, i32* %11)
  %13 = load %struct.atm_vcc*, %struct.atm_vcc** %2, align 8
  %14 = call i32 @close_rx(%struct.atm_vcc* %13)
  %15 = call i32 @EVENT(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 0)
  %16 = load %struct.atm_vcc*, %struct.atm_vcc** %2, align 8
  %17 = call i32 @close_tx(%struct.atm_vcc* %16)
  %18 = call i32 @DPRINTK(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  %19 = load %struct.atm_vcc*, %struct.atm_vcc** %2, align 8
  %20 = call i32 @ZATM_VCC(%struct.atm_vcc* %19)
  %21 = call i32 @kfree(i32 %20)
  %22 = load %struct.atm_vcc*, %struct.atm_vcc** %2, align 8
  %23 = getelementptr inbounds %struct.atm_vcc, %struct.atm_vcc* %22, i32 0, i32 1
  store i32* null, i32** %23, align 8
  %24 = load i32, i32* @ATM_VF_ADDR, align 4
  %25 = load %struct.atm_vcc*, %struct.atm_vcc** %2, align 8
  %26 = getelementptr inbounds %struct.atm_vcc, %struct.atm_vcc* %25, i32 0, i32 0
  %27 = call i32 @clear_bit(i32 %24, i32* %26)
  br label %28

28:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @DPRINTK(i8*) #1

declare dso_local i32 @ZATM_VCC(%struct.atm_vcc*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @close_rx(%struct.atm_vcc*) #1

declare dso_local i32 @EVENT(i8*, i32, i32) #1

declare dso_local i32 @close_tx(%struct.atm_vcc*) #1

declare dso_local i32 @kfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
